# gem-forge-transform

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
benchmark/: Benchmark.py  Constants.py  CortexSuite.py  Driver.py  GenerateTestInputs.py  Graph500.py  MachSuite.py  MultiProgramBenchmark.py  SDVBS.py  SPEC2017.py  SPU.py  StreamStatistics.py  TestHelloWorld.py  Util.py  hoffman2.sh  replay.c
driver/: Benchmark.py  Constants.py  CortexSuite.py  Driver.py  GenerateTestInputs.py  JobScheduler.py  MachSuite.py  SDVBS.py  SPEC2017.py  SPU.py  StreamStatistics.py  TestHelloWorld.py  Util.py  VerticalSuite.py  rodinia.ssp.sh  (+6 more)
prototype/: CCA.cpp  CMakeLists.txt  DataGraph.cpp  DataGraph.h  DynamicInstruction.cpp  DynamicInstruction.h  DynamicTrace.cpp  DynamicTrace.h  GZUtil.cpp  GZUtil.h  GZipUtil.cpp  GZipUtil.h  IdenticalTransformer.cpp  IdenticalTransformer.h  LocateAccelerableFunctions.cpp  LocateAccelerableFunctions.h  Prototype.cpp  Replay.cpp  Replay.h  SIMDPass.cpp  StreamAnalyzeTrace.cpp  StreamReplay.cpp  TraceMessage.proto  TraceParser.h  TraceParserGZip.cpp  TraceParserGZip.h  TraceParserProtobuf.cpp  TraceParserProtobuf.h  TracePass.cpp  TraceStatisticPass.cpp  Tracer.cpp  Tracer.h  TracerGZip.c  TracerGZip.cpp  TracerProtobuf.cpp  logger.c
src/: BasicBlockBranchDataGraph.cpp  BasicBlockBranchDataGraph.h  BasicBlockPredicate.cpp  BasicBlockPredicate.h  CCA.cpp  CMakeLists.txt  CacheWarmer.cpp  CacheWarmer.h  DataGraph.cpp  DataGraph.h  DeadCodeElimination.cpp  DynamicInstruction.cpp  DynamicInstruction.h  DynamicLoopTree.cpp  DynamicLoopTree.h  ExecutionDataGraph.cpp  ExecutionDataGraph.h  Gem5ProtobufSerializer.cpp  Gem5ProtobufSerializer.h  GemForgeBasePass.cpp  GemForgeBasePass.h  LocateAccelerableFunctions.cpp  LocateAccelerableFunctions.h  LoopUnroller.cpp  LoopUnroller.h  LoopUtils.cpp  LoopUtils.h  MemoryAccessPattern.cpp  MemoryAccessPattern.h  MemoryFootprint.cpp  MemoryFootprint.h  MemoryPattern.cpp  MemoryPattern.h  PostDominanceFrontier.cpp  PostDominanceFrontier.h  ProtobufSerializer.cpp  ProtobufSerializer.h  RegionStatRecorder.cpp  RegionStatRecorder.h  Replay.cpp  (+13 more)
src/adfa/: AbstractDataFlowAcceleratorPass.cpp  AbstractDataFlowAcceleratorPass.h
src/affinity_alloc/: affinity_alloc.cpp  affinity_alloc.h  affinity_allocator.cpp  affinity_allocator.h  gem_forge_ops.cpp
src/simd/: SIMDPass.cpp
src/speculative_precomputation/: CriticalLoadManager.cpp  CriticalLoadManager.h  PrecomputationSlice.cpp  PrecomputationSlice.h  SpeculativePrecomputationPass.cpp  SpeculativePrecomputationPass.h
src/stream/: CMakeLists.txt  DynIndVarStream.cpp  DynIndVarStream.h  DynMemStream.cpp  DynMemStream.h  DynStream.cpp  DynStream.h  DynStreamRegionAnalyzer.cpp  DynStreamRegionAnalyzer.h  IndVarStream.cpp  IndVarStream.h  InductionVarStream.cpp  InductionVarStream.h  InlineContext.cpp  InlineContext.h  InlineContextStream.cpp  InlineContextStream.h  InlineContextStreamPass.cpp  MemStream.cpp  MemStream.h  StaticIndVarStream.cpp  StaticIndVarStream.h  StaticMemStream.cpp  StaticMemStream.h  StaticStream.cpp  StaticStream.h  StaticStreamRegionAnalyzer.cpp  StaticStreamRegionAnalyzer.h  Stream.cpp  Stream.h  StreamConfigureLoopInfo.cpp  StreamConfigureLoopInfo.h  StreamExecutionPass.cpp  StreamMessage.proto  StreamPass.cpp  StreamPass.h  StreamPassOptions.cpp  StreamPassOptions.h  StreamPattern.cpp  StreamPattern.h  (+10 more)
src/stream/ae/: AddressDataGraph.cpp  AddressDataGraph.h  AddressEngine.cpp  CMakeLists.txt  DynamicStreamCoalescer.cpp  DynamicStreamCoalescer.h  FunctionalStream.cpp  FunctionalStream.h  FunctionalStreamEngine.cpp  FunctionalStreamEngine.h  FunctionalStreamPattern.cpp  FunctionalStreamPattern.h  StreamDataGraph.cpp  StreamDataGraph.h
src/stream/execution/: CMakeLists.txt  NestStreamConfigureDataGraph.cpp  NestStreamConfigureDataGraph.h  StaticNestStreamBuilder.cpp  StaticNestStreamBuilder.h  StaticStreamLoopBoundBuilder.cpp  StaticStreamLoopBoundBuilder.h  StreamExecutionPass.cpp  StreamExecutionPass.h  StreamExecutionStaticPass.cpp  StreamExecutionStaticPass.h  StreamExecutionTransformer.cpp  StreamExecutionTransformer.h  StreamLoopEliminator.cpp  StreamLoopEliminator.h  StreamMemIntrinsic.c  StreamMemset.c
src/strip_m5/: StripM5.cpp
src/trace/: BasicBlockTraceMessage.proto  BasicBlockTracer.cpp  BasicBlockTracer.h  CMakeLists.txt  CallLoopProfileTree.cpp  CallLoopProfileTree.h  GZipUtil.cpp  InstructionUIDMap.cpp  InstructionUIDMap.h  InstructionUIDMapReader.cpp  InstructionUIDMapReader.h  ProfileAnalyzePass.cpp  ProfileAnalyzePass.h  ProfileLogger.cpp  ProfileLogger.h  ProfileMessage.proto  ProfileParser.cpp  ProfileParser.h  SimpointIntervalSelectPass.cpp  SimpointIntervalSelectPass.h  TraceMessage.proto  TraceParser.h  TraceParserGZip.cpp  TraceParserGZip.h  TraceParserProtobuf.cpp  TraceParserProtobuf.h  TracePass.cpp  Tracer.cpp  Tracer.h  TracerGZip.cpp  TracerImpl.h  TracerProtobuf.cpp  UIDMap.proto
src/valid/: ValidExecutionPass.cpp
test/: CMakeLists.txt  ReplayPassTestFixture.cpp  ReplayPassTestFixture.h  TestSample.cpp  TestSetup.cpp  TestSetup.h  build.sh  logger.c  replay.c  tdg_verify.py  test.sh
test/MachSuite/: Makefile.TDG  Makefile.TDG.mk
test/MachSuite/fft/strided/: Makefile  fft.c
test/MachSuite/fft/strided-pseudo/: fft.c
test/MachSuite/fft/strided-raw/: Makefile  fft.c
test/MachSuite/fft/transpose/: Makefile  fft.c
test/MachSuite/kmp/kmp/: Makefile  kmp.h
test/adfa/: ADFADependenceTest.cpp
test/adfa/inputs/: Bank.c  BankBandwidth.c  EmptyLoopBody.c  NestedLoop.c  ReductionVar.c
test/fft_stride/: fft_stride.c
test/hello/: hello.c
test/kmp/: kmp.c
test/loop_unroller/: UnrollDependenceTest.cpp
test/loop_unroller/inputs/: EmptyLoopBody.c
test/stream/: MultipleSteps.cpp  StepInstDetectionTest.cpp  StreamCoalesceTest.cpp  StreamInstDependenceTest.cpp  StreamPassTestFixture.cpp  StreamPassTestFixture.h  StreamTransformPlanTest.cpp
test/stream/inputs/: BasicListTransverse.c  Coalesce.c  ForLoop.c  SparseVecDotVec.c  StepThenStore.c  StoreToSamePlace.c  Unrolled.c
test/testscratch/: Makefile  main.c
(+1228 files in other folders)
